@@ -1,4 +1,4 @@
-openfstwin-1.3.3
+openfstwin-1.3.4
 ================
 
-openfstwin-1.3.3
+openfstwin-1.3.4
